java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField10-hints.pass
Create Local Variable a
Create Field a in org.netbeans.test.java.hints.CreateField10
Create Parameter a
